deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: praxis-test
spec:
  parentRefs:
    - name: praxis-test
  rules:
    - backendRefs:
        - name: echo
          port: 8080
